<resources>
    <string name="app_name">A_lesson1</string>
    <string name="some_text">SOME TEXT</string>
    <string name="t">Tыкни</string>
    <string name="text_on1">Включено</string>
    <string name="text_off1">Выключено</string>
    <string name="next">Next</string>
    <string name="button">Button</string>
    <string name="text1">Подёргай</string>
    <string name="str_hello">Привет! Позже здесь будет полезный текст</string>
    <string name="title">Мы собираем Ваши данные</string>
    <string name="name">Имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="age">Возраст</string>
    <string name="password">Пароль банковского приложения</string>
    <string name="email">E-Mail</string>
    <string name="address">Почтовый адрес</string>
    <string name="bdate">Дата рождения</string>
    <string name="title2">А это календарь, выберите любую дату</string>
</resources>